[project]
name = "linkedin-content-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "firecrawl>=2.16.5",
    "firecrawl-py>=2.16.5",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-deepseek>=0.1.4",
    "langgraph>=0.6.5",
    "notion-client>=2.2.1",
    "python-dotenv>=1.0.0",
]
